# SneakernetStudio

./: .gitignore  README.md  gitignore.txt  update-studio.sh
Templates/: build.sh
Templates/HelloWorld/: CMakeLists.txt  build.bat  build.sh  main.c
Templates/HelloWorld/Projects/: README.md
Templates/HelloWorld/assets/: build.sh
Templates/HelloWorld/assets/sounds/: README.md  build.sh
Templates/HelloWorld/include/: build.sh  bullet.h  entity.h  utils.h
Templates/HelloWorld/src/: bullet.c  entity.c  utils.c
assets/textures/: README.md
tools/: Toolchain_Zig.cmake
